fix: Toast Overlap with BrainzPlayer

--- a/frontend/css/brainzplayer.less
+++ b/frontend/css/brainzplayer.less
@@ -31,7 +31,7 @@
 
   padding: @brainzplayer-padding;
   border-top: 1px solid @gray-light;
-  z-index: 9999;
+  z-index: 9998;
 
   > * {
     flex: 1;
@@ -353,7 +353,7 @@
   border-top: 1px solid #ccc;
   box-shadow: -6px -1px 10px rgba(0, 0, 0, 0.2);
   overflow-y: auto;
-  z-index: 9999;
+  z-index: 9998;
   right: 0;
   &.show {
     bottom: @brainzplayer-height;
